18906
{code}
import scala.reflect.macros.whitebox._
import scala.language.experimental.macros

class Bundle(val c: Context) {
  import c.universe._
  def impl = q"new { val x = 2 }"
}

object Macros {
  def foo: Any = macro Bundle.impl
}
{code}

{code}
18:53 ~/Projects/Master/sandbox (master)$ ss
Test.scala:2: error: value x is not a member of Any
  println(Macros.foo.x)
                     ^
one error found
{code}
